@@ -1,3 +1,12 @@
+2007-11-06  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (top): Don't autoload `tramp-cache-print'.
+
+	* tramp-cache (tramp-cache-print): Move down.
+	(tramp-cache-list-connections): New defun.
+
+	* tramp-cmds.el (tramp-cleanup-connection): Use it.
+
 2007-11-05  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-wait-for-output): Ignore escape sequences in the
